# vscode-wine-mingw-boilerplate

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  gdbserver  nix.Dockerfile  win.Dockerfile
.devcontainer/: devcontainer.json  docker-compose.yml
client/: CMakeLists.txt  main.cpp
hello/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp
src/: main.cpp
